Visually broken/stepped wireframe in object mode (regression) #77130

Closed
opened 2020-05-28 16:12:26 +02:00 by Vyacheslav Kobozev · 12 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version:
2.83 (sub 17), branch: master, commit date: 2020-05-27 16:03, hash: 79e529c5ec
2.90 (sub 4), branch: master, commit date: 2020-05-27 18:04, hash: d7282537f0
Worked:
blender-2.83-e8dd8c2829f3-windows64

Short description of error
Edit mode looks properly. But object mode have stair on circle mesh
39601106.jpg

without antialiasing it looks worse
39633310.jpg

previous builds:
39611606.jpg

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.83 (sub 17), branch: master, commit date: 2020-05-27 16:03, hash: `79e529c5ec` 2.90 (sub 4), branch: master, commit date: 2020-05-27 18:04, hash: `d7282537f0` Worked: blender-2.83-e8dd8c2829f3-windows64 **Short description of error** Edit mode looks properly. But object mode have stair on circle mesh ![39601106.jpg](https://archive.blender.org/developer/F8560162/39601106.jpg) without antialiasing it looks worse ![39633310.jpg](https://archive.blender.org/developer/F8560174/39633310.jpg) previous builds: ![39611606.jpg](https://archive.blender.org/developer/F8560161/39611606.jpg)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm while testing with these Blender versions:
2.83 f772a4b8fa (2020-05-26 22:42)
2.83 79e529c5ec (2020-05-27 16:03)
2.83 ff1040c6fe (2020-05-28 11:42)
2.90 2deb6c5177 (2020-05-28 18:34)
On Windows 10 with a GTX 1050Ti with driver 445.87.

I will update the task description along with look at recent commits to see if I can pin point the commit that caused the issue. At the moment I haven't figured out how to bi-sect builds.

Can confirm while testing with these Blender versions: 2.83 `f772a4b8fa` (2020-05-26 22:42) 2.83 `79e529c5ec` (2020-05-27 16:03) 2.83 `ff1040c6fe` (2020-05-28 11:42) 2.90 `2deb6c5177` (2020-05-28 18:34) On Windows 10 with a GTX 1050Ti with driver 445.87. I will update the task description along with look at recent commits to see if I can pin point the commit that caused the issue. At the moment I haven't figured out how to bi-sect builds.
Member

39aa122a0e is most likely the cause. The commit says

HACK: to avoid loosing sub pixel object in selections, we add a bit of randomness to the wire to at least create one fragment that will pass the occlusion query.
TODO(fclem) Limit this workaround to selection. It's not very noticeable but still...
39aa122a0e is most likely the cause. The commit says ``` HACK: to avoid loosing sub pixel object in selections, we add a bit of randomness to the wire to at least create one fragment that will pass the occlusion query. TODO(fclem) Limit this workaround to selection. It's not very noticeable but still... ```
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

@fclem Are you able to comment on this?
Is the cause actually this commit?
If it is the commit, what's the plan going forward? Temporarily revert the commit or leave it in there and fix it at a later date?

@fclem Are you able to comment on this? Is the cause actually this commit? If it is the commit, what's the plan going forward? Temporarily revert the commit or leave it in there and fix it at a later date?

Added subscriber: @MeshVoid

Added subscriber: @MeshVoid

I'm going to fix it right away.

I'm going to fix it right away.
Member

Thank you @fclem for all the work you do.

Thank you @fclem for all the work you do.

This issue was referenced by 1d2b89304a

This issue was referenced by 1d2b89304ac33993c29f53ebdd41cc84056982d1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-05-29 12:29:46 +02:00
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:35:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77130
No description provided.