Fix T77130: Visually broken/stepped wireframe in object mode (regression)

Create a new shader for the selection fix.

Differential Revision: https://developer.blender.org/D7873