source/blender/draw/engines/overlay/shaders/extra_wire_vert.glsl
@@ -17,10 +17,12 @@ void main()
   vec3 world_pos = point_object_to_world(pos);
   gl_Position = point_world_to_ndc(world_pos);
 
+#ifdef SELECT_EDGES
   /* HACK: to avoid loosing sub pixel object in selections, we add a bit of randomness to the
    * wire to at least create one fragment that will pass the occlusion query. */
   /* TODO(fclem) Limit this workaround to selection. It's not very noticeable but still... */
   gl_Position.xy += sizeViewportInv.xy * gl_Position.w * ((gl_VertexID % 2 == 0) ? -1.0 : 1.0);
+#endif
 
   stipple_coord = stipple_start = screen_position(gl_Position);
 
@@ -37,6 +39,10 @@ void main()
     finalColor = color;
     finalColor.a = 1.0; /* Stipple */
   }
+#endif
+
+#ifdef SELECT_EDGES
+  finalColor.a = 0.0; /* No Stipple */
 #endif
 
 #ifdef USE_WORLD_CLIP_PLANES
